k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-green-prod
  labels:
    name: nexus-green-prod
    environment: production
